# L3G-MIAGE

./: MaPremiereClasse.java  README.md
.metadata/: version.ini
.metadata/.mylyn/.taskListIndex/: segments_1
.metadata/.plugins/org.eclipse.core.resources/.root/: 5.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.core/: 1570852477.index  1865797976.index  1957423114.index  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Algo_C/: CMakeLists.txt
Algo_C/Revisions/: CC_Voitures.c  Exam2122_1.c  Notation_Polonaise.c
Algo_C/TD3BIS/: CMakeLists.txt  Exercice1.c  Exercice2.c  catastrophe.c
Algo_C/TD4/: Exercice01.c  Exercice02.c  Exercice04.c  Exercice05.c  Exercice08.c  Exercice09.c  Exercice1.c  Exercice10.c  Exercice11.c  Exercice12.c  Exercice13.c  Exercice14.c  Exercice15.c  Exercice16.c  Exercice17.c  Exercice2.c  Exercice3.c  Exercice4.c  Exercice5.c  Exercice6.c  Exercice7.c  Exercice8.c  Exercice9.c  ExerciceCours.c
Algo_C/TD5/: Exercice01.c  Exercice02.c  Exercice03.c  Exercice04.c  Exercice05.c  Exercice06.c  Exercice07.c  Exercice08.c  Exercice09.c  Exercice10.c  Exercice11.c  Exercice12.c  Exercice13.c  Exercice14.c  Exercice15.c  ExerciceCours.c
Algo_C/TD6/: Exercice01.c  Exercice02.c  Exercice03.c  Exercice04.c  Exercice05.c  Exercice06.c  FileMedecin.c  SPCours.c
Algo_C/TD7/: Exercice03.c  Exercice04.c  Exercice06.c  Exercice08.c  Exercice11.c
ClientServeur/: .classpath
ClientServeur/src/application/: Principale.java
ClientServeur/src/datasource/: SourceDeDonnees.java
CoursPHP/: Test.php
CoursPHP/TD2/: TD2_Prog1.php
CoursPHP/TD3/: formTva.html  traitMontant.php
CoursPHP/TD4/Ex1/: formJeu.html  jouer.php
CoursPHP/TD4/Ex3/: formulaire.html  traitForm.php
CoursPHP/TD6/siteTD5 CORR2024/: entete.html  formVille.php  index.php  indexcopy.php  vueContacts.php  vueContactsEntreprise.php  vueVille.php
CoursPHP/TD7/: entete.html  formAjoutEnt.php  formVille.php  index.php  pieddepage.html  traitAjoutEnt.php  vueContacts.php  vueContactsEntreprise.php  vueContactsPerso.php  vueVille.php
CoursPHP/TD8/: connectBdd.php  crebdcontactV2.sql  entete.php  formAjoutContact.php  formAjoutEnt.php  formAjoutEntreprise.php  formCnx.php  formModif.php  formSupEntreprise.php  formVille.php  index.php  navbar.html  navbarAdmin.html  pieddepage.html  traitAjoutContact.php  traitAjoutEnt.php  traitCnx.php  traitModif.php  traitVille.php  vueContacts.php  vueContactsEntreprise.php  vueContactsPerso.php  vueVille.php
CoursPHP/TD9/: connectBdd.php  entete.php  footer.html  modelePage.php  vueCategorie.php
CoursPHP/siteTD/: connectBdd.php  creBdContacts.sql  entete.html  formGenre.php  index.php  pieddepage.html  vueAlbums.php  vueAlbumsTri.php  vueContactsEntreprise.php  vueContactsPerso.php  vueParGenre.php  vueVille.php
PHP/: Ex.php  Ex1.html
POO/src/: MaPremiereClasse.java
POO/src/exo2_6/: OperationsArithmetiquesWithToString.java
POO/src/exo2_8/: OperationsArithmetiquesWithClone.java
POO/src/exo2_9/: MainWithArguments.java  OperationsArithmetiquesWithArguments.java
POO/src/tp3/: Main.java  MainWithArguments.java  MainWithClone.java  MainWithConstructors.java  MainWithEquals.java  MainWithStatic.java  MainWithToString.java  OperationsArithmetiquesWithArguments.java  OperationsArithmetiquesWithClone.java  OperationsArithmetiquesWithConstructors.java  OperationsArithmetiquesWithEquals.java  OperationsArithmetiquesWithMain.java  OperationsArithmetiquesWithStatic.java  OperationsArithmetiquesWithToString.java
Web/: Global.css  TD Old School.html
Web/TDOldSchool/: TD Old School.html  TD_Old_School.js
(+94 files in other folders)
