cmake_minimum_required(VERSION 3.26)
project(AlgoC C)

set(CMAKE_C_STANDARD 23)

add_executable(TD3BISEx1 TD3BIS/Exercice1.c)
add_executable(TD3BISEx2 TD3BIS/Exercice2.c)
add_executable(TD4Ex1 TD4/Exercice01.c)
add_executable(TD4Ex2 TD4/Exercice02.c)
add_executable(TD4Ex3 TD4/Exercice03.c)
add_executable(TD4Ex4 TD4/Exercice04.c)
add_executable(TD4Ex5 TD4/Exercice05.c)
add_executable(TD4Ex6 TD4/Exercice06.c)
add_executable(TD4Ex7 TD4/Exercice07.c)
add_executable(TD4Ex8 TD4/Exercice08.c)
add_executable(TD4Ex9 TD4/Exercice09.c)
add_executable(TD4Ex10 TD4/Exercice10.c)
add_executable(TD4Ex11 TD4/Exercice11.c)
add_executable(TD4Ex12 TD4/Exercice12.c)
add_executable(TD4Ex13 TD4/Exercice13.c)
add_executable(TD4Ex14 TD4/Exercice14.c)
add_executable(TD4Ex15 TD4/Exercice15.c)
add_executable(TD4Ex16 TD4/Exercice16.c)
