cmake_minimum_required(VERSION 3.26)
project(AlgoC C)

set(CMAKE_C_STANDARD 23)

add_executable(TD3BISEx1 TD3BIS/Exercice1.c)
add_executable(TD3BISEx2 TD3BIS/Exercice2.c)
add_executable(TD4Ex1 TD4/Exercice01.c)
add_executable(TD4Ex2 TD4/Exercice02.c)
add_executable(TD4Ex3 TD4/Exercice03.c)
add_executable(TD4Ex4 TD4/Exercice04.c)
add_executable(TD4Ex5 TD4/Exercice05.c)
add_executable(TD4Ex6 TD4/Exercice06.c)
add_executable(TD4Ex7 TD4/Exercice07.c)
add_executable(TD4Ex8 TD4/Exercice08.c)
add_executable(TD4Ex9 TD4/Exercice09.c)
add_executable(TD4Ex10 TD4/Exercice10.c)
add_executable(TD4Ex11 TD4/Exercice11.c)
add_executable(TD4Ex12 TD4/Exercice12.c)
add_executable(TD4Ex13 TD4/Exercice13.c)
add_executable(TD4Ex14 TD4/Exercice14.c)
add_executable(TD4Ex15 TD4/Exercice15.c)
add_executable(TD4Ex16 TD4/Exercice16.c)
add_executable(TD4Ex17 TD4/Exercice17.c)
add_executable(TD4ExCours TD4/ExerciceCours.c)
add_executable(TD5Ex1 TD5/Exercice01.c)
add_executable(TD5Ex2 TD5/Exercice02.c)
add_executable(TD5Ex3 TD5/Exercice03.c)
add_executable(TD5Ex4 TD5/Exercice04.c)
add_executable(TD5Ex5 TD5/Exercice05.c)
add_executable(TD5Ex6 TD5/Exercice06.c)
add_executable(TD5Ex7 TD5/Exercice07.c)
add_executable(TD5Ex8 TD5/Exercice08.c)
add_executable(TD5Ex9 TD5/Exercice09.c)
add_executable(TD5Ex10 TD5/Exercice10.c)
add_executable(TD5Ex11 TD5/Exercice11.c)
add_executable(TD5Ex12 TD5/Exercice12.c)
add_executable(TD5Ex13 TD5/Exercice13.c)
add_executable(TD5Ex14 TD5/Exercice14.c)
add_executable(TD5Ex15 TD5/Exercice15.c)
add_executable(TD5ExerciceCours TD5/ExerciceCours.c)
add_executable(TD6Ex1 TD6/Exercice01.c)
add_executable(TD6Ex2 TD6/Exercice02.c)
add_executable(TD6Ex3 TD6/Exercice03.c)
add_executable(TD6Ex4 TD6/Exercice04.c)
add_executable(TD6Ex5 TD6/Exercice05.c)
add_executable(TD6Ex6 TD6/Exercice06.c)
add_executable(TD6SPCours TD6/SPCours.c)
add_executable(TD6FileMedecin TD6/FileMedecin.c)
add_executable(TD7Ex3 TD7/Exercice03.c)
add_executable(TD7Ex4 TD7/Exercice04.c)
add_executable(TD7Ex6 TD7/Exercice06.c)
add_executable(TDEx11 TD7/Exercice11.c)
add_executable(TD7Ex8 TD7/Exercice08.c)
add_executable(RevExam2122_1 Revisions/Exam2122_1.c)
add_executable(RevCC_Voitures Revisions/CC_Voitures.c)
add_executable(RevNotationPolonaise Revisions/Notation_Polonaise.c)
